Revert "feat(CDI) Refs: #29552 (#29678)" (#29800)
This reverts commit 11358b03af48d4b439bb13fa97506af719404f2f.

This change breaks the API Playground 
as it adds an extra API prefix to the URLs like this:


http://localhost:8080/api/api/v1/contenttype?orderby=upper%28name%29&direction=ASC