@@ -1,30 +1,32 @@
 package com.dotcms.rest.exception.mapper;
 
 import com.dotcms.exception.ExceptionUtil;
-import com.dotcms.rest.exception.BadRequestException;
-import com.dotcms.rest.exception.HttpStatusCodeException;
-import com.dotcms.rest.exception.ValidationException;
-import com.dotmarketing.util.Logger;
-import com.fasterxml.jackson.databind.exc.ValueInstantiationException;
-import java.util.Optional;
-import java.util.Set;
+import com.fasterxml.jackson.databind.JsonMappingException;
 import javax.ws.rs.WebApplicationException;
 import javax.ws.rs.core.Response;
 import javax.ws.rs.ext.ExceptionMapper;
 import javax.ws.rs.ext.Provider;
+import com.dotcms.rest.exception.BadRequestException;
+import com.dotcms.rest.exception.HttpStatusCodeException;
+import com.dotcms.rest.exception.ValidationException;
+import com.dotmarketing.util.Logger;
+import com.google.common.collect.ImmutableSet;
+
+import java.util.Optional;
+import java.util.Set;
 
 /**
  * Handles error on the Jackson mapping
  * @author jsanca
  */
 @Provider
-public class JsonMappingExceptionMapper implements ExceptionMapper<ValueInstantiationException> {
+public class JsonMappingExceptionMapper implements ExceptionMapper<JsonMappingException> {
 
-    private static final Set<Class<? extends Throwable>> EXCEPTIONS =
-                    Set.of(WebApplicationException.class, ValidationException.class, BadRequestException.class, HttpStatusCodeException.class);
+    private final static Set<Class<? extends Throwable>> EXCEPTIONS =
+                    ImmutableSet.of(WebApplicationException.class, ValidationException.class, BadRequestException.class, HttpStatusCodeException.class);
 
     @Override
-    public Response toResponse(final ValueInstantiationException exception)
+    public Response toResponse(final JsonMappingException exception)
     {
         //Log into our logs first.
         Logger.warn(this.getClass(), exception.getMessage(), exception);
@@ -32,7 +34,7 @@ public class JsonMappingExceptionMapper implements ExceptionMapper<ValueInstanti
         final Optional<Throwable> throwable = ExceptionUtil.getCause(exception,  EXCEPTIONS);
         //Return 4xx message to the client.
         return throwable.isPresent()?
-                ((WebApplicationException) throwable.get()).getResponse():
+                WebApplicationException.class.cast(throwable.get()).getResponse():
                 ExceptionMapperUtil.createResponse(ExceptionMapperUtil.getJsonErrorAsString(exception.getMessage()), exception.getMessage());
     }
 }
